[gd_scene load_steps=13 format=3 uid="uid://d2bfv5m5qudc7"]

[ext_resource type="Texture2D" uid="uid://2wyer1trrenh" path="res://assets/book-test-big-x3.png" id="1_g6ke1"]
[ext_resource type="Script" uid="uid://bjaghc73epk6k" path="res://level_select/open_folder_template.gd" id="2_p3ot5"]
[ext_resource type="Texture2D" uid="uid://dhpy0p3lyay4o" path="res://assets/level_select/tabs-4-x3.png" id="3_mn6ym"]
[ext_resource type="Shape2D" uid="uid://44un3tl8v86i" path="res://level_select/closed_tab.tres" id="4_g6ke1"]
[ext_resource type="Shape2D" uid="uid://c4vl3w531sv72" path="res://level_select/open_tab.tres" id="5_nff8j"]
[ext_resource type="Texture2D" uid="uid://dbaq50qbxhonf" path="res://assets/level_select/inside-left-x3.png" id="7_s6uyr"]
[ext_resource type="Texture2D" uid="uid://wbk4vf40q0cp" path="res://assets/level_select/inside-right-x3.png" id="8_edlsa"]

[sub_resource type="Animation" id="Animation_nff8j"]
resource_name = "open_3_backwards"
length = 0.8
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [15, 14, 13, 12, 11, 10, 9, 8]
}

[sub_resource type="Animation" id="Animation_p3ot5"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [15]
}

[sub_resource type="Animation" id="Animation_mn6ym"]
resource_name = "open_2_backwards"
length = 0.8
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [15, 14, 13, 12, 11, 10, 9, 8]
}

[sub_resource type="Animation" id="Animation_31gbh"]
resource_name = "open_1_backwards"
length = 0.8
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [15, 14, 13, 12, 11, 10, 9, 8]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5tgre"]
_data = {
&"RESET": SubResource("Animation_p3ot5"),
&"open_1_backwards": SubResource("Animation_31gbh"),
&"open_2_backwards": SubResource("Animation_mn6ym"),
&"open_3_backwards": SubResource("Animation_nff8j")
}

[node name="level_select_4" type="Sprite2D"]
scale = Vector2(2, 2)
texture = ExtResource("1_g6ke1")
centered = false
hframes = 8
vframes = 2
frame = 15
script = ExtResource("2_p3ot5")

[node name="tab_rect" type="TextureRect" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_mn6ym")

[node name="tabs" type="Area2D" parent="."]

[node name="tab1" type="CollisionShape2D" parent="tabs"]
position = Vector2(81, 87)
shape = ExtResource("4_g6ke1")

[node name="tab2" type="CollisionShape2D" parent="tabs"]
position = Vector2(696, 135)
shape = ExtResource("4_g6ke1")

[node name="tab3" type="CollisionShape2D" parent="tabs"]
position = Vector2(695, 186)
shape = ExtResource("5_nff8j")

[node name="tab4" type="CollisionShape2D" parent="tabs"]
position = Vector2(695, 234)
shape = ExtResource("5_nff8j")

[node name="left_content" type="TextureRect" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("7_s6uyr")

[node name="right_content" type="TextureRect" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("8_edlsa")

[node name="play" type="Button" parent="."]
offset_left = 514.5
offset_top = 447.0
offset_right = 555.5
offset_bottom = 478.0
text = "play
"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_5tgre")
}

[connection signal="input_event" from="tabs" to="." method="_on_tabs_input_event"]
[connection signal="pressed" from="play" to="." method="_on_play_pressed"]
