[gd_scene load_steps=7 format=3 uid="uid://ef1xg2d1ed8s"]

[ext_resource type="Texture2D" uid="uid://bfvlhbb3p2u8t" path="res://assets/level_select/level-select-sprite.png" id="1_r4rgc"]
[ext_resource type="Script" uid="uid://bjaghc73epk6k" path="res://level_select/open_folder_template.gd" id="2_keav4"]
[ext_resource type="Texture2D" uid="uid://daoijgqnsxmm6" path="res://assets/evidence/sd-card.png" id="3_f1pno"]

[sub_resource type="Animation" id="Animation_mf8v1"]
resource_name = "open_4_backwards"
length = 0.8
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [35, 34, 33, 32, 31, 30, 29, 28]
}

[sub_resource type="Animation" id="Animation_7i7hd"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [35]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7i7hd"]
_data = {
&"RESET": SubResource("Animation_7i7hd"),
&"open_4_backwards": SubResource("Animation_mf8v1")
}

[node name="level_select_5" type="Sprite2D"]
position = Vector2(39, 0)
texture = ExtResource("1_r4rgc")
centered = false
hframes = 8
vframes = 5
frame = 35
script = ExtResource("2_keav4")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_7i7hd")
}

[node name="next" type="TextureButton" parent="."]
offset_left = 184.0
offset_top = 94.0
offset_right = 224.0
offset_bottom = 134.0
disabled = true
texture_normal = ExtResource("3_f1pno")

[node name="back" type="TextureButton" parent="."]
offset_left = -31.0
offset_top = 94.0
offset_right = 9.0
offset_bottom = 134.0
texture_normal = ExtResource("3_f1pno")

[connection signal="pressed" from="next" to="." method="_on_next_pressed"]
[connection signal="pressed" from="back" to="." method="_on_back_pressed"]
